# protectionpro

./: .dockerignore  .gitignore  BACKLOG.md  CALCULATION_VERIFICATION.html  CALC_REVIEW_ROUND2_PRINCIPAL.md  CLAUDE.md  Dockerfile  EE_REVIEW_ARCFLASH_CABLE_GROUNDING.md  EE_REVIEW_PRINCIPAL_ADJUDICATION.md  FEATURE_GAP_ANALYSIS.md  HELP.md  PLAN_MARKUP_INTEGRATION_PLAN.md  README.md  RETIC_ADMD_INTEGRATION_PLAN.md  REVIEW-FINDINGS-PLAN-MARKUP.md  TRANSIENT_STABILITY_ROADMAP.md  audit-2026-07-09.md  audit-responses.md  claude.md  distribution-designer-pro_v9.37.html  docker-compose.yml  plan.md  retic-builder-pro-v2.0.5.html  run.sh
.github/workflows/: backend-tests.yml
audit-history/: AUDIT_REPORT.md  CALC_REVIEW_ROUND2_EE.md  CALC_REVIEW_ROUND2_PS.md  CALC_REVIEW_ROUND3_PRINCIPAL.md  CALC_VERIFICATION_2026-07-19.md  EE_REVIEW_FAULT_LOADFLOW.md  EE_REVIEW_INVERTER_REACTIVE_JACOBIAN.md  README.md  audit-2026-06-21.md  auditverify.md
backend/: auth.py  main.py  requirements.txt
backend/analysis/: admd.py  admd_data.py  arcflash.py  backup_autonomy.py  battery_sizing.py  cable_sizing.py  capacitor_placement.py  contingency.py  ct_model.py  dc_arcflash.py  dc_loadflow.py  dc_shortcircuit.py  duty_check.py  dynamic_motor_starting.py  fault.py  filter_sizing.py  flicker.py  frequency_scan.py  grounding_system.py  harmonics.py  hosting_capacity.py  loadflow.py  (+14 more)
clients/python/: README.md  protectionpro_client.py  pyproject.toml
docs/: HELP.md
frontend/: Dockerfile  index.html  nginx.conf  verification.html
testing/: PLAN.md  README.md  build_verification_templates.py
(+136 files in other folders)
